# talked

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  custom_css.js  pyproject.toml
.devcontainer/: Dockerfile.generic  Dockerfile.vscode  devcontainer.json
.github/: feature-request.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: release.yml
docker/: Dockerfile.dev  entrypoint.sh
server/: server.py
talked/: __init__.py  __main__.py  ffmpeg.py  main.py  recorder.py
talked/static/: custom_css.js
