[tool.poetry]
name = "talked"
version = "0.1.4"
description = "Call recording for Nextcloud Talk"
authors = ["Magnus Walbeck <mw@mwalbeck.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/MetaProvide/talked"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
PyVirtualDisplay = "^2.2"
Flask = "^2.0.1"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
flake8-bugbear = "^21.4.3"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
