[tool.poetry]
name = "talked"
version = "0.4.0"
description = "Call recording for Nextcloud Talk"
authors = ["Magnus Walbeck <mw@mwalbeck.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/MetaProvide/talked"

[tool.poetry.scripts]
talked = 'talked:__main__'

[tool.poetry.dependencies]
python = "^3.7"
selenium = ">=3.141.0, < 5"
PyVirtualDisplay = ">=0.2.1, < 3"
Flask = ">=1.1.2, < 3"
tomlkit = ">=0.6.0, < 0.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
flake8-bugbear = "^21.4.3"
pytest = "^6.2.4"
mypy = "^0.910"
pylint = "^2.12.2"
bandit = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
good-names = "i,j,k,ex,Run,_,e"
